--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name"    : "Leanote",
-  "version" : "0.7",
-  "main"    : "main.js"
+  "name": "Leanote",
+  "version": "0.7",
+  "main": "main.js",
+  "devDependencies": {
+    "electron": "^4.1.4"
+  }
 }
