--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "version": "0.7",
   "main": "main.js",
   "devDependencies": {
-    "electron": "^4.1.4"
+    "electron": "^4.1.4",
+    "nedb": "^1.1.1"
+  },
+  "dependencies": {
+    "electron": "^4.1.4",
+    "nedb": "^1.1.1",
+    "async": "^0.9.2",
+    "needle": "^0.7.10",
+    "node-getmac": "^1.0.3",
+    "resanitize": "^0.3.0"
+},
+  "scripts": {
+    "package": "electron-packager . leanote --platform=darwin --arch=x64 --out=../leanote --electron-version=4.1.4"    
   }
 }
