--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "async": "^0.9.2",
+    "dragula": "^3.7.2",
     "nedb": "^1.1.1",
     "needle": "^0.7.10",
     "node-getmac": "^1.0.3",
